Melhora responsividade. Adiciona site de adivinhação de música

--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
                      <i><img src="images/service2.png" alt="#" /></i>
                      <h3>Alta Compatibilidade</h3>
                      <p>
-                        Plataforma independente de lingaugem de programação, framework, dependências ou 
+                        Plataforma independente de linguagem de programação, framework, dependências ou 
                         sistemas de banco de dados. As aplicações de cada usuário podem coexistir sem problemas
                         uma vez que cada uma é executada em um container auto-contido e isolado. Se funciona
                         em casa, vai funcionar no Hub! 
@@ -219,14 +219,15 @@
                <div class="col-md-12">
                   <div class="sites">
                      <h1>Sites</h1>
-                     <p>Veja os sites e aplicativos hospedados no momento no hub</p>
+                     <p>Veja os sites e aplicativos hospedados no hub</p>
                      <div class="owl-carousel owl-theme">
                      <!--<div><a href="#"><img src="images/beetsjr.png" alt="Site 1"></a></div>-->
-                     <div><a href="/duvidasip" target="_blank"><img src="images/duvidasip.png" alt="Site 2"></div></a>
-                     <div><a href="/logicapp" target="_blank"><img src="images/logicapp.png" alt="Site 3"></a></div>
+                     <div><a href="/duvidasip" target="_blank"><img src="images/duvidasip_desktop.png" alt="Site monitoria de IP"></div></a>
+                     <div><a href="/logicapp" target="_blank"><img src="images/logicapp_desktop.png" alt="Site calculadora de lógica"></a></div>
+                     <div><a href="/spotify-music-guess" target="_blank"><img src="images/spotify_music_guess_desktop.png" alt="Site jogo spotify acerte a música"></a></div>
                     </div>
                     <p> 
-                     clique nos botões para trocar os sites.<br>
+                     Arraste a imagem para ver os sites<br>
                      Clique na foto para navegar ao site</p>
                   </div>
                </div>
@@ -245,14 +246,15 @@
       <footer>
          <div class="footer">
             <div class="container">
-               <div class="row d_flex">
-                  <div class="col-lg-3 col-md-6 col-sm-12">
+               <div class="row">
+                  <div class="col-lg-5 col-md-6 col-sm-12">
                      <div class="parceiros logos">
                         <img src="images/ufscarlogo.png" alt="logo da ufscar">
                         <img src="images/hackoon.png" alt="logo da HackoonSpace">
+                        <img src="images/maritacas_logo.png" alt="logo da Maritacas Gamedev">
                      </div>
                   </div>
-                  <div class="col-lg-4 offset-lg-5 col-md-4 offset-md-2 col-sm-12">
+                  <div class="col-lg-4 offset-lg-3 col-md-4 offset-md-2 col-sm-12">
                      <div class="parceiros">
                         <h4>Parceiros</h4>
                         <p>
