Adiciona dedicatória para o logo

--- a/index.html
+++ b/index.html
@@ -275,6 +275,10 @@
                            <span>
                               Edição e adaptação por <a href="https://github.com/rafaelbarbeta">Rafael Barbeta</a>
                            </span>
+                           <br>
+                           <span>
+                              Logo por <a href="https://www.instagram.com/brunapsdesigner_/?igshid=NzZlODBkYWE4Ng%3D%3D">brunapsdesigner</a>
+                           </span>
                         </p>
                      </div>
                   </div>
